# kivski-tactical-ai-simulator

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLOUD-24-7.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  start.bat  start.ps1  stop.bat  stop.ps1
.github/workflows/: ci.yml
apps/api/kivski_api/: __init__.py  app.py  metrics_broadcaster.py  policies.py  server.py  session.py  training_clock.py
apps/api/kivski_api/routes/: __init__.py  checkpoints.py  cloud.py  health.py  maps.py  match.py  system.py  training.py  ws.py
apps/web/: .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: AgentDetailModal.tsx  BottomControls.tsx  CloudSyncPanel.tsx  CommsOverlay.tsx  CommsTab.tsx  DebugToggles.tsx  EconomyMiniBar.tsx  ErrorBoundary.tsx  HeatmapOverlay.tsx  InfluenceArrows.tsx  InspectorTab.tsx  LeftSidebar.tsx  MapViewer.tsx  MatchHeader.tsx  MatchSetupModal.tsx  MetricsPanel.tsx  RightSidebar.tsx  RoundTimeline.tsx  SettingsDrawer.tsx  SystemInfo.tsx  TrainingPanel.tsx
apps/web/src/lib/: api-client.ts  event-icons.ts  format.ts  fov-clipping.ts  map-loader.ts  pixi-context.tsx  store.ts  types.ts  wire.ts
configs/: default.yaml  fast.yaml  production.yaml  turbo.yaml  viewer.yaml
docker/: 24-7-supervisor.sh  Dockerfile  README.md  entrypoint.sh  runpod-template.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MAP_FORMAT.md  ML.md  OBSERVATION_ACTION_SPEC.md  ROADMAP.md  TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-06-19-cloud-24-7-hardening.md
models/_archive_2v2/api-20260524-014511-1afaa16b32bf/: main_ep_1025.pt.json  main_ep_1295.pt.json  main_ep_1551.pt.json  main_ep_1807.pt.json  main_ep_2063.pt.json  main_ep_2318.pt.json  main_ep_2574.pt.json  main_ep_2826.pt.json  main_ep_3080.pt.json  main_ep_763.pt.json
models/_archive_pre_turbo/api-20260524-131425-fd87f00ac11d/: main_ep_256.pt.json
models/_archive_pre_viewer/api-20260523-222609-cb726cf82bed/: main_ep_252.pt.json  main_ep_502.pt.json  main_ep_755.pt.json
models/_archive_pre_viewer/api-20260523-233652-ca6be707653a/: main_ep_252.pt.json
scripts/: bootstrap_bc.py  collect_imitation.py  debug_ws_frames.py  e2e_agent_ux.py  e2e_auto_reload.py  e2e_fov_clip.py  e2e_full_walkthrough.py  e2e_inspector_comms.py  e2e_repro_bugs.py  e2e_smoke.py  e2e_training_visible.py  eval.py  manual_eval_bc.py  manual_eval_debug.py  manual_eval_quick.py  polish_v2_screenshot.py  screenshot_ui_redesign.py  screenshot_ui_redesign_pill.py  serve.py  train.py  train_bc.py  watch.py
tests/integration/: test_api.py  test_api_auto_reload.py  test_env_smoke.py  test_training_smoke.py
tests/smoke/: test_full_stack_smoke.py
tests/unit/: test_api_policies.py  test_auto_reload.py  test_baselines.py  test_checkpoint_compat.py  test_cloud_sync.py  test_combat.py  test_engine.py  test_env.py  test_eval.py  test_geometry.py  test_imitation_loss.py  test_map_loader.py  test_mappo.py  test_networks.py  test_replay.py  test_reward_shaping.py  test_rng.py  test_telemetry.py  test_training_clock.py  test_utils.py  test_watchdog.py
