[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kivski"
version = "0.1.0"
description = "Kivski Tactical AI Simulator - multi-agent RL bomb-defuse environment with live match viewer."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "Kivski Contributors" }]
keywords = ["reinforcement-learning", "multi-agent", "simulation", "marl", "pettingzoo", "mappo", "tarmac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "numpy>=1.26,<3.0",
    "scipy>=1.11",
    "numba>=0.59; python_version < '3.13'",  # numba not yet on 3.13/3.14
    "msgpack>=1.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "tqdm>=4.66",
    "pettingzoo>=1.24",
    "gymnasium>=0.29",
    "torch>=2.2",
    "tensorboard>=2.16",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "trueskill>=0.4.5",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.99",
    "ruff>=0.4",
    "mypy>=1.9",
    "httpx>=0.27",
]
all = ["kivski[wandb,dev]"]

[project.scripts]
kivski-train = "scripts.train:app"
kivski-eval = "scripts.eval:app"
kivski-serve = "scripts.serve:app"
kivski-watch = "scripts.watch:app"

[tool.setuptools]
packages = [
    "kivski_sim",
    "kivski_agents",
    "kivski_agents.baselines",
    "kivski_agents.eval",
    "kivski_agents.networks",
    "kivski_agents.training",
    "kivski_api",
    "kivski_api.routes",
    "scripts",
]

[tool.setuptools.package-dir]
"kivski_sim" = "packages/sim/kivski_sim"
"kivski_agents" = "packages/agents/kivski_agents"
"kivski_agents.baselines" = "packages/agents/kivski_agents/baselines"
"kivski_agents.eval" = "packages/agents/kivski_agents/eval"
"kivski_agents.networks" = "packages/agents/kivski_agents/networks"
"kivski_agents.training" = "packages/agents/kivski_agents/training"
"kivski_api" = "apps/api/kivski_api"
"kivski_api.routes" = "apps/api/kivski_api/routes"
"scripts" = "scripts"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["apps/web", "node_modules", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer uses callable defaults (typer.Argument/Option) by design.
"scripts/*.py" = ["B008"]
# Smoke tests gate imports behind pytest.importorskip so module-level imports
# legitimately appear after statements.
"tests/smoke/*.py" = ["E402"]
# ML/torch code uses single-letter capital names (T = time steps, N = batch,
# L = sequence length, H = hidden dim, F = torch.nn.functional alias) as
# established mathematical conventions; these are deliberate, not bugs.
"packages/agents/**/*.py" = ["N803", "N806", "N812", "N814"]
"tests/unit/test_networks.py" = ["N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/sim", "packages/agents", "apps/api", "."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
